retrieve inventory base on its id
